# catears

./: Cargo.toml  build.rs
.cargo/: config.toml
.zed/: debug.json
dash/: bun.lockb  package-lock.json  package.json
dash/scripts/: hash-password-base64.js
dash/src/: middleware.ts
dash/src/app/: globals.css  layout.tsx  page.tsx
dash/src/app/api/auth/login/: route.ts
dash/src/app/api/auth/logout/: route.ts
dash/src/app/api/auth/verify/: route.ts
dash/src/app/api/upload-state/: route.ts
dash/src/components/: AudioControl.tsx  ColorPicker.tsx  EarSelector.tsx  LightControl.tsx  ServoControl.tsx  StatePreview.tsx  ThemeToggle.tsx
dash/src/lib/: auth.ts
dash/src/store/: auth-store.ts  catears-store.ts
dash/src/types/: catears.ts
driver/: .gitignore  Embed.toml
driver/.zed/: settings.json
driver/assets/: catears.json
driver/src/: lib.rs  lights.rs  main.rs  networking.rs  servo.rs  state.rs
src/: audio.rs  cmdline.rs  state.rs
