[package]
edition = "2021"
name = "catears"
rust-version = "1.86"
version = "0.1.0"

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal = { version = "1.0.0-rc.0", features = [
    "defmt",
    "esp32s3",
    "unstable",
] }
embassy-net = { version = "0.7.0", features = [
    "defmt",
    "dhcpv4",
    "dhcpv4-hostname",
    "dns",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
esp-alloc = { version = "0.8.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
bt-hci = { version = "0.2.1", features = [] }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
    "defmt",
    "task-arena-size-32768",
] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
esp-hal-embassy = { version = "0.9.0", features = ["defmt", "esp32s3"] }
esp-wifi = { version = "0.15.0", features = [
    "ble",
    "builtin-scheduler",
    "coex",
    "defmt",
    "esp-alloc",
    "esp32s3",
    "smoltcp",
    "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "defmt",
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
static_cell = "2.1.1"
trouble-host = { version = "0.1.0", features = ["gatt"] }
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community", rev = "582f5bc2422ee18ceceb012ce0534ad90480c58c", features = [
    "defmt",
    "esp32s3",
] }
smart-leds = { version = "0.4.0", features = ["serde"] }
heapless = { version = "0.8.0", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
reqwless = { version = "0.13.0", default-features = false, features = [
    "defmt",
    "embedded-tls",
] }
esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls.git", rev = "89263cbed18f0e75d15f352e050aedad27aa97eb", features = [
    "esp32s3",
] }
xtensa-lx-rt = { version = "0.19.0", features = ["esp32s3"] }
embedded-cli = "0.2.1"
ufmt = "0.2.0"
libm = "0.2.15"
bytemuck = "1.23.1"
embassy-futures = { version = "0.1.1", features = ["defmt"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_arrays = "0.2.0"
serde-json-core = { version = "0.6.0", features = ["defmt"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
